--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,38 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.navbar {
   display: flex;
-  flex-direction: column;
+  justify-content: space-around;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
+  background-color: rgb(36, 103, 179);
 }
 
-.App-link {
-  color: #61dafb;
+.movieList {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.movie {
+  background-color: rgb(112, 102, 211);
+  color: white;
+  margin: 10px;
+  padding: 40px;
+}
+
+.addMovie {
+  background-color: antiquewhite;
+  padding: 30px;
+}
+
+input {
+  padding: 10px;
+  margin: 5px;
+}
+
+button {
+  background-color: rgb(29, 180, 24);
+  padding: 10px;
 }
